fix(topnav): debug de l'overflow

--- a/wp-content/themes/cyrille-mulot/assets/sass/Layouts/_l-topnav.scss
+++ b/wp-content/themes/cyrille-mulot/assets/sass/Layouts/_l-topnav.scss
@@ -41,7 +41,6 @@
       height: 70%;
       display: flex;
       align-items: center;
-      overflow-y: auto;
 
       @include down(1023) {
         position: fixed;
@@ -60,7 +59,6 @@
       }
 
       .l-topnav__principal-nav-items {
-        width: 70%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -70,6 +68,7 @@
           flex-direction: column;
           justify-content: center;
           margin: auto;
+          width: 70%;
         }
 
         li {
